* Tested Log-Webhook. * Switch from deprecated Method usage to newer replacements for those. * Update pom to a fixed commit.